feat: Update UI theme and navigation
Refactors the UI to use a new "titanium" theme with updated color schemes for the body, header, and scrollbars. Introduces a new `CategoryNav` component, replacing the `Sidebar`, and integrates a `ViewCodeModal` for displaying script content. Adjusts styling for better visual consistency and updates icon colors.

--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
       }
     </script>
     <style>
-        /* Custom scrollbar for the new aurora theme */
+        /* Custom scrollbar for the new titanium theme */
         ::-webkit-scrollbar {
             width: 8px;
             height: 8px;
         }
         ::-webkit-scrollbar-track {
-            background: #110f1a;
+            background: #18181b;
         }
         ::-webkit-scrollbar-thumb {
-            background: #4a356a;
+            background: #3f3f46;
             border-radius: 4px;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: #6d4fa6;
+            background: #f97316;
         }
     </style>
   <script type="importmap">
@@ -48,7 +48,7 @@
 }
 </script>
 </head>
-  <body class="bg-[#0b0914] text-zinc-300 antialiased font-sans">
+  <body class="bg-zinc-950 text-zinc-300 antialiased font-sans">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
