fix: Update color theme and UI elements
This commit refactors the application's UI to use a more consistent and visually appealing color scheme. It adjusts background colors, scrollbar styles, and text highlights to align with a refined "Titanium" theme. Additionally, it makes minor adjustments to layout containers for better responsiveness and presentation.

--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
       }
     </script>
     <style>
-        /* Custom scrollbar for the new titanium theme */
+        /* Custom scrollbar for the Titanium theme */
         ::-webkit-scrollbar {
             width: 8px;
             height: 8px;
         }
         ::-webkit-scrollbar-track {
-            background: #18181b;
+            background: #27272a; /* zinc-800 */
         }
         ::-webkit-scrollbar-thumb {
-            background: #3f3f46;
+            background: #52525b; /* zinc-600 */
             border-radius: 4px;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: #f97316;
+            background: #f97316; /* orange-600 */
         }
     </style>
   <script type="importmap">
@@ -48,7 +48,7 @@
 }
 </script>
 </head>
-  <body class="bg-zinc-950 text-zinc-300 antialiased font-sans">
+  <body class="bg-zinc-900 text-zinc-300 antialiased font-sans">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
